--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <meta name=description content>
 <meta name=keywords content>
 <meta name=robots content=noindex,nofollow>
-<link rel=canonical href=http://pruebamiaa.pagedemo.co/>
-<title>prueba2</title>
+<title>Inscripciones</title>
 <meta property=og:locale content=en_US>
 <meta property=og:type content=article>
 <meta property=og:title content>
